fixing responsive aspect on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -55,9 +55,10 @@ body {
         height: 70vh;
         border-radius: 20px;
         box-shadow: 0 0 20px 10px black;
+        margin-bottom: 15px;
         .question-display {
             width: 100%;
-            height: 30%;
+            height: 20vh;
             border: 2px solid black;
             margin-bottom: 30px;
             border-radius : 10px;
@@ -80,7 +81,7 @@ body {
             gap: 10px;
             .cards__answer {
                 width: auto;
-                height: auto;
+                height: 10vh;
                 border: 2px solid rgb(0, 0, 0);
                 border-radius: 10px;
                 display: flex;
@@ -94,7 +95,7 @@ body {
         }
     }
     .footer {
-        margin: 5px;
+        margin-bottom: 15px;
         .start-button, .next-button {
             width: 120px;
             height: 30px;
@@ -172,6 +173,7 @@ body {
             }
         }
         .footer {
+            margin-bottom: 10px;
             .start-button, .next-button {
                 width: 120px;
                 height: 40px;
@@ -179,6 +181,7 @@ body {
                 border-radius: 5px;
                 box-shadow: 0 0 10px 2px black;
                 font-size: 1rem;
+                
             }
         }
     }
